[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vuln-triage-env"
version = "1.0.0"
description = "A real-world environment where an agent acts as a DevSecOps engineer triaging vulnerability scanner alerts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "openai>=1.0",
    "fastapi",
    "uvicorn",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"